# pdf2epub

./: .gitignore  AGENTS.md  CLAUDE.md  CONVERSIONS.md  LICENSE  NOTES.md  README.md  pyproject.toml
.claude/skills/convert-pdf/: SKILL.md
.claude/skills/proofread-epub/: SKILL.md
.github/workflows/: ci.yml
books/: corpus_baseline.json
books/book-of-knowledge/: book.arabic.yaml  book.draft.yaml  book.yaml  qa_assertions.book.arabic.yaml  qa_assertions.yaml
books/book-of-knowledge/analysis/: analysis.json  structure_report.md
books/form-and-substance-in-the-religions/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/frithjof-schuon-life-and-teachings/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/harmonious-unity/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/harmonious-unity/analysis/: analysis.json  (+1 more)
books/islam-and-buddhism/: WIP-STATUS.md  book.draft.yaml  book.yaml  qa_assertions.yaml
books/keys-to-the-beyond/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/me-and-rumi/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/pray-without-ceasing/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/sufism-veil-and-quintessence/: book.draft.yaml  book.yaml  qa_assertions.yaml
books/the-mystics-of-islam/: book.yaml  qa_assertions.yaml
scripts/: bench_layout.py  bootstrap.sh
specs/: README.md  arabic-fonts.md  commercial-parity.md  ocr-witness.md  qa-methodology.md  reliability-hardening.md  semantic-polish.md
src/pdf2epub/: __init__.py  analyze.py  blockshapes.py  build.py  cli.py  config.py  corpuscmd.py  figures.py  flowbuilder.py  fonts.py  index_locators.py  initcmd.py  kindle.py  layoutwitness.py  mapping.py  pdfmodel.py  proofread.py  provenance.py  report.py  styles_synth.py  textfix.py  thumbs.py  warnqueue.py
tests/: test_a11y.py  test_assertions.py  test_cdp.py  test_config.py  test_contents_links.py  test_corpuscmd.py  test_cssresolve.py  test_epubload.py  test_extract.py  test_fidelity.py  test_flow.py  test_groundtruth.py  test_imprints.py  test_index_locators.py  test_kindle.py  test_lang.py  test_layoutwitness.py  test_nav.py  test_ordercheck.py  test_pdfchecks.py  test_proofread.py  test_provenance.py  test_quran.py  test_styles_synth.py  test_textnorm.py  test_typography.py  test_visualqa.py  test_warnqueue.py
tools/ace/: package-lock.json  package.json
(+55 files in other folders)
