[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2epub"
version = "0.1.0"
description = "Convert print-oriented book PDFs into validated reflowable EPUB 3 ebooks"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.25",
    "lxml>=5",
    "PyYAML>=6",
    "rapidfuzz>=3",
    "Pillow>=10",
    "fonttools>=4.50",
]

[project.scripts]
pdf2epub = "pdf2epub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
